pepe but on Bitcoin

--- a/index.html
+++ b/index.html
@@ -25,10 +25,7 @@
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Bitcoin Pepe" />
-    <meta
-      name="twitter:description"
-      content="The first Pepe on Bitcoin Layer 2 - Built on Stacks, Community Driven, Bitcoin Powered"
-    />
+    <meta name="twitter:description" content="Pepe but on Bitcoin" />
     <meta
       name="twitter:image"
       content="https://pepecoins.io/img/bitcoin-is-king--5--1.png"
