replace redirect from alex to fakfun

--- a/frame-12.html
+++ b/frame-12.html
@@ -12,13 +12,19 @@
     <meta name="og:site_name" content="PEPE Coin" />
     <meta name="og:title" content="PEPE Coin" />
     <meta name="og:description" content="Pepe but on Bitcoin" />
-    <meta name="og:image" content="./img/0aca6b9f-8ed8-4f27-9173-463e1c0200c4-1.png" />
+    <meta
+      name="og:image"
+      content="./img/0aca6b9f-8ed8-4f27-9173-463e1c0200c4-1.png"
+    />
     <meta name="twitter:card" content="photo" />
     <meta name="twitter:title" content="PEPE Coin" />
     <meta name="twitter:description" content="Pepe but on Bitcoin" />
     <meta name="twitter:image:width" content="320px" />
     <meta name="twitter:image:height" content="320px" />
-    <meta name="twitter:image:src" content="./img/0aca6b9f-8ed8-4f27-9173-463e1c0200c4-1.png" />
+    <meta
+      name="twitter:image:src"
+      content="./img/0aca6b9f-8ed8-4f27-9173-463e1c0200c4-1.png"
+    />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
@@ -37,19 +43,34 @@
           <div class="overlap-group1">
             <div class="overlap-group">
               <div class="info">
-                <h1 class="title poppins-medium-sonic-silver-56px">Pepe Coin</h1>
-                <a href="https://app.alexlab.co/swap?fromCurrency=token-wstx&toCurrency=token-wpepe" target="_blank">
+                <h1 class="title poppins-medium-sonic-silver-56px">
+                  Pepe Coin
+                </h1>
+                <a
+                  href="https://fak.fun/swap-btc/SP6SA6BTPNN5WDAWQ7GWJF1T5E2KWY01K9SZDBJQ.pepe-faktory-pool"
+                  target="_blank"
+                >
                   <div class="frame-6">
-                    <div class="place-a-bid"><div class="x-pepe poppins-bold-white-14px">Buy PEPE</div></div>
+                    <div class="place-a-bid">
+                      <div class="x-pepe poppins-bold-white-14px">Buy PEPE</div>
+                    </div>
                   </div></a
                 >
               </div>
-              <a href="https://app.alexlab.co/pool/token-amm-swap-pool-v1-1:token-wstx,token-wpepe,1e8" target="_blank">
-                <div class="place-a-bid-1"><div class="x-pepe poppins-bold-white-14px">Join PEPE Pool</div></div></a
+              <a
+                href="https://app.alexlab.co/pool/token-amm-swap-pool-v1-1:token-wstx,token-wpepe,1e8"
+                target="_blank"
+              >
+                <div class="place-a-bid-1">
+                  <div class="x-pepe poppins-bold-white-14px">
+                    Join PEPE Pool
+                  </div>
+                </div></a
               >
             </div>
             <p class="welcome-autists-bit poppins-normal-sonic-silver-18px">
-              <span class="span poppins-normal-sonic-silver-18px">Welcome autists.<br /></span
+              <span class="span poppins-normal-sonic-silver-18px"
+                >Welcome autists.<br /></span
               ><span class="span poppins-semi-bold-sonic-silver-18px"
                 >Bitcoin is our future, and the hodlers are our frens</span
               >
@@ -62,13 +83,18 @@
               <div class="group-container-3">
                 <div class="group-19">
                   <div class="flex-col">
-                    <div class="address poppins-normal-white-36px">21 Billion</div>
-                    <div class="total-supply poppins-normal-white-14px">Total Supply</div>
+                    <div class="address poppins-normal-white-36px">
+                      21 Billion
+                    </div>
+                    <div class="total-supply poppins-normal-white-14px">
+                      Total Supply
+                    </div>
                   </div>
                   <div class="group-10">
                     <div class="pepe-sip-010 poppins-normal-white-36px">
                       <span class="span-1 poppins-normal-white-36px">PEPE </span
-                      ><span class="span1 poppins-normal-white-10px">(SIP-010)<br /></span
+                      ><span class="span1 poppins-normal-white-10px"
+                        >(SIP-010)<br /></span
                       ><span class="span-1 poppins-normal-white-36px"></span>
                     </div>
                     <div class="ticker poppins-normal-white-14px">Ticker</div>
@@ -84,7 +110,9 @@
                       src="img/1024px-telegram-logo-1.png"
                       alt="1024px-Telegram_logo 1"
                     />
-                    <div class="pepe-coin-stx poppins-bold-mountain-mist-12px">PepeCoinSTX</div>
+                    <div class="pepe-coin-stx poppins-bold-mountain-mist-12px">
+                      PepeCoinSTX
+                    </div>
                   </div></a
                 >
                 <div class="telegram poppins-normal-white-14px">Telegram</div>
@@ -117,12 +145,18 @@
                 href="https://explorer.hiro.so/txid/SP1Z92MPDQEWZXW36VX71Q25HKF5K2EPCJ304F275.tokensoft-token-v4k68639zxz?chain=mainnet"
                 target="_blank"
               >
-                <div class="place-a-bid-2"><div class="contract poppins-bold-white-14px">Contract</div></div></a
+                <div class="place-a-bid-2">
+                  <div class="contract poppins-bold-white-14px">Contract</div>
+                </div></a
               ><a
                 href="https://explorer.hiro.so/txid/SP1Z92MPDQEWZXW36VX71Q25HKF5K2EPCJ304F275.liquidity-token-v5kr3b59xpn?chain=mainnet"
                 target="_blank"
               >
-                <div class="place-a-bid-3"><div class="transactions poppins-bold-white-14px">Transactions</div></div></a
+                <div class="place-a-bid-3">
+                  <div class="transactions poppins-bold-white-14px">
+                    Transactions
+                  </div>
+                </div></a
               >
             </div>
           </div>
@@ -134,72 +168,105 @@
                   src="img/5b24e49fd89287ff1eb5bbc4cf93cb038c3384ef-512x512-1.png"
                   alt="5b24e49fd89287ff1eb5bbc4cf93cb038c3384ef-512x512 1"
                 />
-                <div class="pepe-coin-stx poppins-bold-mountain-mist-12px">Pepe Coin (STX)</div>
+                <div class="pepe-coin-stx poppins-bold-mountain-mist-12px">
+                  Pepe Coin (STX)
+                </div>
               </div></a
             >
             <div class="discord poppins-normal-white-14px">Discord</div>
           </div>
         </div>
-        <div class="portfolio"><head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
+        <div class="portfolio">
+          <head>
+            <meta charset="UTF-8" />
+            <meta
+              name="viewport"
+              content="width=device-width, initial-scale=1.0"
+            />
+            <style>
+              body {
+                font-family: Arial, sans-serif;
+                margin: 0;
+                padding: 0;
+              }
 
-        p {
-            text-align: center;
-        }
-    </style>
-</head>
-<body>
-    <p>
-        <iframe src="https://satscreener.com/stx/Pepe%20Coin_ALEX_SP1Z92MPDQEWZXW36VX71Q25HKF5K2EPCJ304F275.tokensoft-token-v4k68639zxz" width="1580" height="650" loading="lazy" title="Portfolio" frameborder="0"></iframe>
-    </p>
-</body>
-</div>
-        <div class="portfolio-1"><head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
+              p {
+                text-align: center;
+              }
+            </style>
+          </head>
+          <body>
+            <p>
+              <iframe
+                src="https://satscreener.com/stx/Pepe%20Coin_ALEX_SP1Z92MPDQEWZXW36VX71Q25HKF5K2EPCJ304F275.tokensoft-token-v4k68639zxz"
+                width="1580"
+                height="650"
+                loading="lazy"
+                title="Portfolio"
+                frameborder="0"
+              ></iframe>
+            </p>
+          </body>
+        </div>
+        <div class="portfolio-1">
+          <head>
+            <meta charset="UTF-8" />
+            <meta
+              name="viewport"
+              content="width=device-width, initial-scale=1.0"
+            />
+            <style>
+              body {
+                font-family: Arial, sans-serif;
+                margin: 0;
+                padding: 0;
+              }
 
-        p {
-            text-align: center;
-        }
-    </style>
-</head>
-<body>
-    <p>
-        <iframe src="https://app.alexlab.co/swap?fromCurrency=token-wstx&toCurrency=token-wpepe" width="1200" height="500" loading="lazy" title="Portfolio" frameborder="0"></iframe>
-    </p>
-</body>
-</div>
-        <div class="twitter"><head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        .twitter-container {
-            height: 1200px; /* Adjust this value to your desired height */
-            overflow-y: auto;
-        }
-    </style>
-</head>
-<body>
-    <div class="twitter-container">
-        <a class="twitter-timeline" href="https://twitter.com/PepeCoinSTX">Tweets by PepeCoinsSTX</a>
-    </div>
-    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-</body>
-
-</div>
+              p {
+                text-align: center;
+              }
+            </style>
+          </head>
+          <body>
+            <p>
+              <iframe
+                src="https://fak.fun/swap-btc/SP6SA6BTPNN5WDAWQ7GWJF1T5E2KWY01K9SZDBJQ.pepe-faktory-pool"
+                width="1200"
+                height="500"
+                loading="lazy"
+                title="Portfolio"
+                frameborder="0"
+              ></iframe>
+            </p>
+          </body>
+        </div>
+        <div class="twitter">
+          <head>
+            <meta charset="UTF-8" />
+            <meta
+              name="viewport"
+              content="width=device-width, initial-scale=1.0"
+            />
+            <style>
+              .twitter-container {
+                height: 1200px; /* Adjust this value to your desired height */
+                overflow-y: auto;
+              }
+            </style>
+          </head>
+          <body>
+            <div class="twitter-container">
+              <a class="twitter-timeline" href="https://twitter.com/PepeCoinSTX"
+                >Tweets by PepeCoinsSTX</a
+              >
+            </div>
+            <script
+              async
+              src="https://platform.twitter.com/widgets.js"
+              charset="utf-8"
+            ></script>
+          </body>
+        </div>
       </div>
     </div>
   </body>
