gamma link update

--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
 
           <div style="text-align: center; margin-top: 40px">
             <a
-              href="https://stacks.gamma.io/collections/bitcoin-pepe"
+              href="https://gamma.io/stacks/collections/bitcoin-pepe/items"
               target="_blank"
               rel="noopener noreferrer"
               class="btn-degen"
@@ -1190,7 +1190,7 @@
                   >Contract</a
                 >
                 <a
-                  href="https://stacks.gamma.io/collections/bitcoin-pepe"
+                  href="https://gamma.io/stacks/collections/bitcoin-pepe/items"
                   target="_blank"
                   rel="noopener noreferrer"
                   style="color: var(--text-tertiary)"
