--- a/iphone-14-u38-15-pro-1.html
+++ b/iphone-14-u38-15-pro-1.html
@@ -60,7 +60,7 @@
             <div class="group-2">
               <h1 class="title">Pepe Coin</h1>
               <a
-                href="https://fak.fun/swap-btc/SP6SA6BTPNN5WDAWQ7GWJF1T5E2KWY01K9SZDBJQ.pepe-faktory-pool"
+                href="https://fak.fun/swap-btc/SP6SA6BTPNN5WDAWQ7GWJF1T5E2KWY01K9SZDBJQ.pepe-faktory-pool-v2"
                 target="_blank"
               >
                 <div class="frame-6">
@@ -143,7 +143,7 @@
           <body>
             <p>
               <iframe
-                src="https://fak.fun/swap-btc/SP6SA6BTPNN5WDAWQ7GWJF1T5E2KWY01K9SZDBJQ.pepe-faktory-pool"
+                src="https://fak.fun/swap-btc/SP6SA6BTPNN5WDAWQ7GWJF1T5E2KWY01K9SZDBJQ.pepe-faktory-pool-v2"
                 width="393"
                 height="502"
                 loading="lazy"
