--- a/mobile-all-breakpoints.html
+++ b/mobile-all-breakpoints.html
@@ -67,7 +67,7 @@
                     Pepe Coin BTC
                   </h1>
                   <a
-                    href="https://fak.fun/swap-btc/SP6SA6BTPNN5WDAWQ7GWJF1T5E2KWY01K9SZDBJQ.pepe-faktory-pool"
+                    href="https://fak.fun/swap-btc/SP6SA6BTPNN5WDAWQ7GWJF1T5E2KWY01K9SZDBJQ.pepe-faktory-pool-v2"
                     target="_blank"
                   >
                     <div class="frame">
@@ -334,7 +334,7 @@
           <body>
             <p>
               <iframe
-                src="https://fak.fun/swap-btc/SP6SA6BTPNN5WDAWQ7GWJF1T5E2KWY01K9SZDBJQ.pepe-faktory-pool"
+                src="https://fak.fun/swap-btc/SP6SA6BTPNN5WDAWQ7GWJF1T5E2KWY01K9SZDBJQ.pepe-faktory-pool-v2"
                 width="1200"
                 height="500"
                 loading="lazy"
@@ -359,7 +359,7 @@
             <div class="group-2-1">
               <h1 class="title-1">Pepe Coin</h1>
               <a
-                href="https://fak.fun/swap-btc/SP6SA6BTPNN5WDAWQ7GWJF1T5E2KWY01K9SZDBJQ.pepe-faktory-pool"
+                href="https://fak.fun/swap-btc/SP6SA6BTPNN5WDAWQ7GWJF1T5E2KWY01K9SZDBJQ.pepe-faktory-pool-v2"
                 target="_blank"
               >
                 <div class="frame-6-1">
@@ -442,7 +442,7 @@
           <body>
             <p>
               <iframe
-                src="https://fak.fun/swap-btc/SP6SA6BTPNN5WDAWQ7GWJF1T5E2KWY01K9SZDBJQ.pepe-faktory-pool"
+                src="https://fak.fun/swap-btc/SP6SA6BTPNN5WDAWQ7GWJF1T5E2KWY01K9SZDBJQ.pepe-faktory-pool-v2"
                 width="393"
                 height="502"
                 loading="lazy"
