--- a/frame-12.html
+++ b/frame-12.html
@@ -47,7 +47,7 @@
                   Pepe Coin
                 </h1>
                 <a
-                  href="https://fak.fun/swap-btc/SP6SA6BTPNN5WDAWQ7GWJF1T5E2KWY01K9SZDBJQ.pepe-faktory-pool"
+                  href="https://fak.fun/swap-btc/SP6SA6BTPNN5WDAWQ7GWJF1T5E2KWY01K9SZDBJQ.pepe-faktory-pool-v2"
                   target="_blank"
                 >
                   <div class="frame-6">
@@ -230,7 +230,7 @@
           <body>
             <p>
               <iframe
-                src="https://fak.fun/swap-btc/SP6SA6BTPNN5WDAWQ7GWJF1T5E2KWY01K9SZDBJQ.pepe-faktory-pool"
+                src="https://fak.fun/swap-btc/SP6SA6BTPNN5WDAWQ7GWJF1T5E2KWY01K9SZDBJQ.pepe-faktory-pool-v2"
                 width="1200"
                 height="500"
                 loading="lazy"
