--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 </p>
                 <div class="cta-group">
                   <a
-                    href="https://fak.fun/swap-btc/SP6SA6BTPNN5WDAWQ7GWJF1T5E2KWY01K9SZDBJQ.pepe-faktory-pool"
+                    href="https://fak.fun/swap-btc/SP6SA6BTPNN5WDAWQ7GWJF1T5E2KWY01K9SZDBJQ.pepe-faktory-pool-v2"
                     target="_blank"
                     rel="noopener noreferrer"
                     class="btn-degen"
@@ -895,7 +895,7 @@
               <p style="color: var(--text-tertiary); font-size: 14px">DEX</p>
             </a>
             <a
-              href="https://fak.fun/swap-btc/SP6SA6BTPNN5WDAWQ7GWJF1T5E2KWY01K9SZDBJQ.pepe-faktory-pool"
+              href="https://fak.fun/swap-btc/SP6SA6BTPNN5WDAWQ7GWJF1T5E2KWY01K9SZDBJQ.pepe-faktory-pool-v2"
               target="_blank"
               rel="noopener noreferrer"
               class="card-glass"
